Added assets to bridge v2 docs

--- a/content/dev-tools/bridge/explore-and-configure-products.mdx
+++ b/content/dev-tools/bridge/explore-and-configure-products.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Use **Home or Product store** to see all the products that you can configure with Setu. Select any one, and start setting up your product integration.
 
--- Insert image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Configure%20products/Product%20Store.png" alt="" />
 
 ##### 1. Create a child sub-org account
 The first step is to set up a child sub-org account, which contains context about a product category and the organisation that can legally use this product. There are different types of legal entities allowed to use different product categories. For example, you will set up an FIU to use Account Aggregator, or set up a merchant to use UPI products. 
@@ -23,7 +23,7 @@ While this is rarely needed, you can also create multiple child sub-org accounts
 <Callout type="tip">Consider creating another product instance for your chosen product before creating a new child sub-org account. This approach helps in easily reusing KYC and other common product details, and it results in a faster review process for the new instance to go live.</Callout>
 
 
--- Insert image/ video here --
+<img src="" alt="" />
 
 ##### 2. Set up product instance
 Depending on the product you choose, you need to fill in different details to start using the product. At times, our products also allow you to directly use the APIs for our products, by generating test credentials and using the “Product ID” in the `product-instance-id` header field.
@@ -36,11 +36,12 @@ Usually, the details you need to fill out for a product instance include the fol
 
 - **KYC details** — Mandatory details as per government regulations, needed and reviewed by Setu only if you intend to go live with a product. These might include PAN, GST, certificates, and other relevant information.
 
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Configure%20products/Setup%20product%20instance.gif" alt="Setup product instance" />
 
 ##### 3. Submit all the details
 Finally, check and verify all the details you have provided, and submit them. A Setu admin will verify all details and if everything looks good, approve your config. This typically takes 2-5 days and you can start transacting on production after approval.
 
--- Insert image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Configure%20products/configure%20products.gif" alt="Configure products " />
 
 <Badge type="tip">UPI Setu</Badge> &nbsp;
 <Badge type="tip">KYC</Badge> &nbsp;
@@ -52,5 +53,14 @@ Finally, check and verify all the details you have provided, and submit them. A 
 ##### 4. Edit configurations
 You can change the configuration provided before you complete the final step of any configuration, which is reviewing the details you have provided. Once you click on the "submit to go live" button, you will not be able to change the details you have provided for the product. The details will first be reviewed by Setu. Once the review is complete, and if any changes are required, you will be able to edit the steps that remain or require changes.
 
--- Insert image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Configure%20products/Edit%20config.gif" alt="Edit configuration" />
 
+<NextPage
+  info={{
+    description: "See how the analytics and reporsts are show on the bridge",
+    slug: "/dev-tools/bridge/analytics-and-reports",
+    title: "Analytics and reports",
+  }}
+/>
+
+<WasPageHelpful />
