--- a/content/dev-tools/bridge/glossary.mdx
+++ b/content/dev-tools/bridge/glossary.mdx
@@ -17,15 +17,21 @@ This is any organisation using the Bridge, and will always be one of the followi
 | **Child sub-org account** | Child sub-org accounts always belong to a parent organisation’s account. When you want to use any product, such as KYC, eNACH, Account Aggregator, or UPI Setu, you need to set up a child sub-org account that contains details for: <br/> <br/> 1. Your organisation, either reused from sign-up or a relevant subsidiary, for which KYC will be done. <br/><br/>  2. The product category you want to use. <br/> <br/> Here are a few examples:  <br/> <br/> • **Account Aggregator FIUs (Financial Information Users):** In the AA ecosystem, entities using financial information, such as personal finance apps or loan providers. <br/> <br/> • **UPI merchants:** In the UPI ecosystem, entities collecting payments through UPI. <br/> <br/> • **BBPS BOU billers:** Entities collecting repeat payments for their services via BBPS-enabled apps. <br/> <br/> • **BBPS COU agents:**Entities offering BBPS-enabled platforms to collect bill payments for BBPS billers. |
 | **Aggregator account (coming soon)** | This is a type of parent Bridge account, that is allowed to resell Setu products to its business customers. The Bridge allows additional features for an aggregator—like viewing combined reports and analytics for all their business customers, or managing their corresponding Parent Bridge accounts with a single login. <br/><br/> If you want to become an aggregator, please contact <a href="mailto:onboarding@setu.co">onboarding@setu.co</a> for more details.|
 
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Glossary/Organisation%20hierarchy.png" alt="" />
+
 <hr class="primary" />
 
 ### Product categories, and products
 Whenever you set up a child sub-org account, you also  choose the product category you want to use it for. Setu’s product categories include Account Aggregator, UPI, BBPS BOU and COU, KYC suite and eSign. These categories have multiple product offerings under them and basically, and you can use the same child org account for using one or more products.
 
+-- Discuss about the asset --
+
 <hr class="tertiary" />
 
 ### Product instance
 If you want to go live with any product, you can set up a product instance, which is basically a set of forms to collect some details we need to enable your integration, along with the child org’s KYC details, that let’s us asses.
+
+-- Discuss about the assest --
 
 <hr class="tertiary" />
 
@@ -54,3 +60,13 @@ You also have access to Live credentials, but you can only use them for producti
 2FA makes your account more secure, with a 2-step login process (password and OTP sent to registered email). This can be enabled for your account in two ways:
 - During sign up, where you are shown the option to enable to enable 2FA for all users of the org and/or just for yourself.
 - After sign up, you can enable 2FA for your organisation, by accessing **Settings → Org preferences** or for yourself by accessing **Settings → Your profile.**
+
+<NextPage
+  info={{
+    description: "Know how to get started with bridge",
+    slug: "/dev-tools/bridge/overview",
+    title: "Overview",
+  }}
+/>
+
+<WasPageHelpful />
