--- a/content/dev-tools/bridge/overview.mdx
+++ b/content/dev-tools/bridge/overview.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Bridge is a free self-serve platform provided by Setu, where you can explore and use multiple products provided by Setu—fill in details to go live with products, manage user access to those products, and also check reports and analytics related to your configured products, on a single platform.
 
--- Image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Home.png" alt="Bridge home" />
 
 **Explore the platform and get started with <a href="https://bridge.setu.co/v2">Setu Bridge</a> **
 
@@ -24,7 +24,7 @@ You can sign up on the Bridge in a few simple steps:
 5. <ins>Provide your business name.</ins> This should belong to the business you’re setting up the Bridge account for. **Quick note:** You can use a different business name later when you configure the product (say, if you have a subsidiary or a different legal name).
 6. <ins>Optionally, set up 2FA (two-factor authentication) for account login.</ins> Enable or disable 2FA, which asks for a password and an OTP sent to your registered e-mail ID whenever you login.
 
--- Image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Sign%20up.gif" alt="Sign up on the bridge" />
 
 ### Log in to Bridge
 
@@ -33,16 +33,16 @@ You can log in to the Bridge in a few simple steps:
 2. Enter your password.
 3. Enter OTP. **Note**, you need to provide an OTP only if you have enabled 2FA.
 
--- Image here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Login.gif" alt="Login into the bridge" />
 
 ### Navigating Bridge
 
--- Image/ video here --
+<img src="" alt="" /> -- Need images/ video here --
 
 ##### Side navigation items
 Explore the different sections on the Bridge sidebar.
 
--- Image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Side%20nav.gif" alt="Bridge side navigation items" />
 
 - The **Home page** is a central view for all products. This is where you can see details of your child accounts, pending integrations, and data on live integrations.
 
@@ -60,5 +60,14 @@ Explore the different sections on the Bridge sidebar.
 
 ##### Your Profile
 
--- Image/ video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Profile.gif" alt="User profile on the bridge" />
 
+<NextPage
+  info={{
+    description: "View all the products and how to set them up",
+    slug: "/dev-tools/bridge/explore-and-configure-products",
+    title: "Explore and configure products",
+  }}
+/>
+
+<WasPageHelpful />
