--- a/content/dev-tools/bridge/user-profile.mdx
+++ b/content/dev-tools/bridge/user-profile.mdx
@@ -9,16 +9,21 @@ visible_in_sidebar: true
 
 Your user profile contains your account details, like e-mail, phone number (optional) and access details to one or more Bridge accounts.
 
--- Insert Image/ Video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/User%20profile/User%20profile.png" alt="User profile" />
+
+<hr class="primary" />
 
 ### How can you access user profile?
+
 You can check all the details attached to your personal profile.
 
 1. **Edit personal details:** You can update your phone number, but the verified email ID provided initially cannot be changed.
 2. **Organisation listing:** View the list of organisations where you are invited.
 3. **Security preferences:** Enable or disable two-factor authentication (2FA) and change your password.
 
--- Insert Image/ Video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/User%20profile/Edit%20Profile.gif" alt="" />
+
+<hr class="tertiary" />
 
 ### When do I have access to multiple organisations, and how do I access it?
 
@@ -30,4 +35,6 @@ To switch between organisations you are part of, follow these steps:
 2. **Check the list of organisations:** The currently active organisation is marked with a green tick. You can view the list of all other organisations.
 3. **Select or search for another organisation:** Click on the organisation you want to switch to. In case you have access to more than 3 accounts, a search bar will be visible and you can search by typing in the name (at least 3 characters) or ID of the Bridge account. You can click the organisation and that account’s details will appear in Bridge.
 
--- Insert Image/ Video here --
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/User%20profile/Select%20organisation.gif" alt="" />
+
+<WasPageHelpful />
