Updated assets in overview & configure page

--- a/content/dev-tools/bridge/explore-and-configure-products.mdx
+++ b/content/dev-tools/bridge/explore-and-configure-products.mdx
@@ -23,7 +23,7 @@ While this is rarely needed, you can also create multiple child sub-org accounts
 <Callout type="tip">Consider creating another product instance for your chosen product before creating a new child sub-org account. This approach helps in easily reusing KYC and other common product details, and it results in a faster review process for the new instance to go live.</Callout>
 
 
-<img src="" alt="" />
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Configure%20products/create-a-child-sub-org.gif" alt="Creating a sub child organisation" />
 
 ##### 2. Set up product instance
 Depending on the product you choose, you need to fill in different details to start using the product. At times, our products also allow you to directly use the APIs for our products, by generating test credentials and using the “Product ID” in the `product-instance-id` header field.
