--- a/content/dev-tools/bridge/overview.mdx
+++ b/content/dev-tools/bridge/overview.mdx
@@ -37,7 +37,7 @@ You can log in to the Bridge in a few simple steps:
 
 ### Navigating Bridge
 
-<img src="" alt="" /> -- Need images/ video here --
+<img src="http://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/navigating-bridge.gif" alt="Sidebar navigation" /> 
 
 ##### Side navigation items
 Explore the different sections on the Bridge sidebar.
