--- a/content/payments/bbps/resources/errors.mdx
+++ b/content/payments/bbps/resources/errors.mdx
@@ -234,6 +234,11 @@ These error codes are specific to the biller.
       <td>bill-already-fulfilled</td>
       <td>Looks like this particular bill has already been paid.</td>
     </tr>
+    <tr>
+      <th>400</th>
+      <td>customer-account-closed</td>
+      <td>The customer account is closed.</td>
+    </tr>
   </tbody>
 </table>
 
