updated-tags-related-info

--- a/content/data/account-aggregator/consent-object.mdx
+++ b/content/data/account-aggregator/consent-object.mdx
@@ -29,6 +29,12 @@ Consent object contains the information about all the different types of data th
 
 <br />
 
+<Callout type="warning">
+  Tag functionality is currently available through APIs only. Support for Bridge UI will be added soon.
+</Callout>
+
+<br />
+
 ### Consent request object
 
 | Property name                                                 | Description                                                                                                                                                                                                                                                                                                                                                                                                  | Mandatory?                                                 |
@@ -107,7 +113,7 @@ Consent object contains the information about all the different types of data th
 
 • Key limitations and rules:
 
-- Tags are case-insensitive (e.g., "partnerA" = "PartnerA")
+- Tags are case-sensitive (e.g., "partnerA" and "PartnerA" will be considered two different tags)
 - Duplicate tags are not allowed
 - Bulk tagging for historical data is not supported
 - Number of tags per FIU is configurable
